# nansen-smart-money-classifier

./: .env.example  .gitignore  .mcp.json  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  nansen-smart-money-classifier-PRD.md  pyproject.toml
.claude/projects/-Users-mac-nansen/memory/: feedback_no_suppress_lint.md
.github/workflows/: ci.yml  model_eval.yml
dags/: daily_pipeline.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: mart_wallet_feature_vectors.sql
dbt/models/staging/: schema.yml  stg_wallet_contract_interactions.sql  stg_wallet_token_activity.sql  stg_wallet_transactions.sql
docs/: interface_spec.md
mcp_server/: Dockerfile  package-lock.json  package.json
mcp_server/src/: client.ts  index.ts  tools.ts
src/: config.py
src/data/: bigquery_extract.py  clickhouse_sync.py  ground_truth.py  protocol_enrichment.py  wallet_context.py
src/experiments/: discovery_validation_split.py  sample_wallet_contexts.py
src/features/: compute_features.py  feature_engineering.py  feature_store.py
src/llm/: cache.py  insight_generator.py  prompts.py
src/models/: classifier.py  cluster_analysis.py  cluster_report.py  cluster_viz.py  clustering.py  evaluation.py  train.py
src/serving/: api.py  dashboard.py  streamlit_app.py
tests/: conftest.py  test_clickhouse_sync.py  test_containers.py  test_dashboard.py  test_data_flow_integration.py  test_feature_store.py  test_features.py  test_integration.py  test_models.py  test_serving.py  test_wallet_context.py
