[project]
name = "nansen-smart-money-classifier"
version = "0.1.0"
description = "ML pipeline for Ethereum wallet behavioral classification — ingest, label, surface signal."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jesse" }]

dependencies = [
    # Data
    "google-cloud-bigquery>=3.25",
    "google-cloud-bigquery-storage>=2.25",
    "db-dtypes>=1.3",
    "clickhouse-connect>=0.7",
    "dbt-bigquery>=1.8",
    "pandas>=2.2",
    "pyarrow>=17",

    # ML
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "hdbscan>=0.8",
    "umap-learn>=0.5",
    "shap>=0.46",
    "optuna>=4.0",
    "torch>=2.4",

    # LLM
    "anthropic>=0.39",

    # Serving
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "streamlit>=1.39",
    "plotly>=5.24",

    # Visualization
    "matplotlib>=3.9",

    # Utilities
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "requests>=2.31",
    "tenacity>=9.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-requests>=2.31",
]
tracking = [
    "wandb>=0.18",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["container: tests requiring docker compose up"]
